wordpress-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
  labels:
    app: wordpress-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-pod
  template:
    metadata:
      labels:
        app: wordpress-pod
    spec:
      containers:
      - name: wordpress-container
        image: wordpress:latest
        ports:
        - containerPort: 80
